--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -20,7 +20,7 @@ env:
   PROJECT_ID: ${{ secrets.GKE_PROJECT }}
   GAR_LOCATION: asia-south1 # TODO: update region of the Artifact Registry
   GKE_CLUSTER: autopilot-cluster-1    # TODO: update to cluster name
-  GKE_ZONE: asia-south1-c   # TODO: update to cluster zone
+  GKE_ZONE: asia-south1   # TODO: update to cluster zone
   DEPLOYMENT_NAME: gke-test # TODO: update to deployment name
 
 jobs:
