--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -1,75 +1,57 @@
-# This workflow will build a docker container, publish it to Google Container Registry, and deploy it to GKE when there is a push to the "main" branch.
-#
-# To configure this workflow:
-#
-# 1. Ensure that your repository contains the necessary configuration for your Google Kubernetes Engine cluster, including deployment.yml, kustomization.yml, service.yml, etc.
-#
-# 2. Create and configure a Workload Identity Provider for GitHub (https://github.com/google-github-actions/auth#setting-up-workload-identity-federation)
-#
-# 3. Change the values for the GAR_LOCATION, GKE_ZONE, GKE_CLUSTER, IMAGE, REPOSITORY and DEPLOYMENT_NAME environment variables (below).
-#
-# For more support on how to run the workflow, please visit https://github.com/google-github-actions/setup-gcloud/tree/master/example-workflows/gke-kustomize
-
-name: Build and Deploy to GKE
+name: Deploy to GKE
 
 on:
   push:
-    branches: [ "main" ]
-
-env:
-  PROJECT_ID: ${{ secrets.GKE_PROJECT }}
-  GAR_LOCATION: asia-south1 # TODO: update region of the Artifact Registry
-  GKE_CLUSTER: autopilot-cluster-1    # TODO: update to cluster name
-  GKE_ZONE: asia-south1   # TODO: update to cluster zone
-  DEPLOYMENT_NAME: gke-test # TODO: update to deployment name
+    branches:
+      - main  # Change this to your main branch name
 
 jobs:
-   build-push-gcr:
-    name: Build and Push to GCP
+  build:
+    name: Build Docker Image
     runs-on: ubuntu-latest
-    environment: production
-
+    
     steps:
-    - name: Checkout
-      uses: actions/checkout@v3
+      - name: Checkout Repository
+        uses: actions/checkout@v2
 
-    # Configure Workload Identity Federation and generate an access token.
-    - name: 'Authorize GCloud'
-      uses: 'google-github-actions/auth@v1'
-      with:
-        credentials_json: '${{ secrets.GKE_SA_KEY }}'
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
 
-        
-    - uses: google-github-actions/setup-gcloud@v1
-      with:
-        project_id: ${{ env.PROJECT_ID }}
+      - name: Login to GCR
+        uses: google-github-actions/auth@v0
+        with:
+          gcr: true
+          service_account_key: ${{ secrets.GKE_SA_KEY }}
 
-    - run: |-
-        gcloud --quiet auth configure-docker
-        gcloud auth configure-docker asia-south1-docker.pkg.dev --quiet
+      - name: Build Docker Image
+        run: |
+          docker buildx build \
+            --tag gcr.io/${{ secrets.GKE_PROJECT }}/your-app-name:${{ github.sha }} \
+            --tag gcr.io/${{ secrets.GKE_PROJECT }}/your-app-name:latest \
+            .
 
-        
-    - uses: google-github-actions/get-gke-credentials@v1
-      with:
-        cluster_name: ${{ env.GKE_CLUSTER }}
-        location: ${{ env.GKE_ZONE }}
-        project_id: ${{ env.PROJECT_ID }}
-        
-    - name: Build Docker Image
-      run: |-
-        docker build \
-          --tag "asia-south1-docker.pkg.dev/$PROJECT_ID/images/$IMAGE:$GITHUB_SHA" \
-          --tag "asia-south1-docker.pkg.dev/$PROJECT_ID/images/$IMAGE:latest" \
-          --build-arg GITHUB_SHA="$GITHUB_SHA" \
-          --build-arg GITHUB_REF="$GITHUB_REF" \
-          -f Dockerfile.dev \
-          .
-          
-    - name: Push Docker Image to Artifact Registry
-      run: |-
-        docker push "asia-south1-docker.pkg.dev/$PROJECT_ID/images/$IMAGE:$GITHUB_SHA"
-        docker push "asia-south1-docker.pkg.dev/$PROJECT_ID/images/$IMAGE:latest"
-        
-    - name: Restart Deployment
-      run: |-
-        kubectl rollout restart deployment $DEPLOYMENT_NAME
+      - name: Push Docker Image to GCR
+        run: |
+          docker push gcr.io/${{ secrets.GKE_PROJECT }}/student-app:${{ github.sha }}
+          docker push gcr.io/${{ secrets.GKE_PROJECT }}/student-app:latest
+
+  deploy:
+    name: Deploy to GKE
+    needs: build
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: Set up GCloud CLI
+        uses: google-github-actions/setup-gcloud@v0
+        with:
+          service_account_key: ${{ secrets.GKE_SA_KEY }}
+          project_id: ${{ secrets.GKE_PROJECT }}
+          export_default_credentials: true
+
+      - name: Configure Docker Authentication
+        run: |
+          gcloud auth configure-docker
+
+      - name: Deploy to GKE
+        run: |
+          kubectl apply -f path/to/your/kubernetes/configs/
