--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -1,57 +1,60 @@
-name: Deploy to GKE
-
+name: Prod Build and Push Advertisers API
 on:
   push:
-    branches:
-      - main  # Change this to your main branch name
-
+    branches: [main]
+    
+env:
+  IMAGE: students
+  PROJECT_ID: speedy-district-413015
+  GKE_CLUSTER: autopilot-cluster-1
+  GKE_ZONE: asia-south1
+  DEPLOYMENT_NAME: students-depl
 jobs:
-  build:
-    name: Build Docker Image
+  build-push-gcr:
+    name: Build and Push to GCP
     runs-on: ubuntu-latest
-    
+    environment: production
+
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
+    - name: Checkout
+      uses: actions/checkout@v3
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+    - name: 'Authorize GCloud'
+      uses: 'google-github-actions/auth@v1'
+      with:
+        credentials_json: '${{ secrets.GKE_SA_KEY }}'
 
-      - name: Login to GCR
-        uses: google-github-actions/auth@v0
-        with:
-          gcr: true
-          service_account_key: ${{ secrets.GKE_SA_KEY }}
+    # Setup gcloud CLI
+    - uses: google-github-actions/setup-gcloud@v1
+      with:
+        project_id: ${{ env.PROJECT_ID }}
 
-      - name: Build Docker Image
-        run: |
-          docker buildx build \
-            --tag gcr.io/${{ secrets.GKE_PROJECT }}/your-app-name:${{ github.sha }} \
-            --tag gcr.io/${{ secrets.GKE_PROJECT }}/your-app-name:latest \
-            .
+    # Configure Docker to use the gcloud command-line tool as a credential
+    # helper for authentication
+    - run: |-
+        gcloud --quiet auth configure-docker
+        gcloud auth configure-docker asia-south1-docker.pkg.dev --quiet
 
-      - name: Push Docker Image to GCR
-        run: |
-          docker push gcr.io/${{ secrets.GKE_PROJECT }}/student-app:${{ github.sha }}
-          docker push gcr.io/${{ secrets.GKE_PROJECT }}/student-app:latest
+    # Get the GKE credentials so we can deploy to the cluster
+    - uses: google-github-actions/get-gke-credentials@v1
+      with:
+        cluster_name: ${{ env.GKE_CLUSTER }}
+        location: ${{ env.GKE_ZONE }}
+        project_id: ${{ env.PROJECT_ID }}
 
-  deploy:
-    name: Deploy to GKE
-    needs: build
-    runs-on: ubuntu-latest
-    
-    steps:
-      - name: Set up GCloud CLI
-        uses: google-github-actions/setup-gcloud@v0
-        with:
-          service_account_key: ${{ secrets.GKE_SA_KEY }}
-          project_id: ${{ secrets.GKE_PROJECT }}
-          export_default_credentials: true
+    - name: Build Docker Image
+      run: |-
+        docker build \
+          --tag "asia-south1-docker.pkg.dev/$PROJECT_ID/images/$IMAGE:$GITHUB_SHA" \
+          --tag "asia-south1-docker.pkg.dev/$PROJECT_ID/images/$IMAGE:latest" \
+          --build-arg GITHUB_SHA="$GITHUB_SHA" \
+          --build-arg GITHUB_REF="$GITHUB_REF" \
+          -f Dockerfile.dev students
 
-      - name: Configure Docker Authentication
-        run: |
-          gcloud auth configure-docker
+    - name: Push Docker Image to Artifact Registry
+      run: |-
+        docker push asia-south1-docker.pkg.dev/$PROJECT_ID/images/$IMAGE --all-tags
 
-      - name: Deploy to GKE
-        run: |
-          kubectl apply -f path/to/your/kubernetes/configs/
+    - name: Restart Deployment
+      run: |-
+        kubectl rollout restart deployment $DEPLOYMENT_NAME
