--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -49,7 +49,7 @@ jobs:
           --tag "asia-south1-docker.pkg.dev/$PROJECT_ID/images/$IMAGE:latest" \
           --build-arg GITHUB_SHA="$GITHUB_SHA" \
           --build-arg GITHUB_REF="$GITHUB_REF" \
-          -f Dockerfile students
+          -f Dockerfile .
 
     - name: Push Docker Image to Artifact Registry
       run: |-
