--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -53,7 +53,7 @@ jobs:
 
     - name: Push Docker Image to Artifact Registry
       run: |-
-        docker push asia-south1-docker.pkg.dev/$PROJECT_ID/images/$IMAGE --all-tags
+        docker push asia-south1-docker.pkg.dev/$PROJECT_ID/$IMAGE --all-tags
 
     - name: Restart Deployment
       run: |-
